<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gadgets"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_gadgets" />
        <item
            android:id="@+id/nav_reservations"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_reservations" />
        <item
            android:id="@+id/nav_loans"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_loans" />
    </group>

    <item android:title="@string/nav_group_account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
